@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Add maximum error limit of 100 #61. Configurable via XML::Config.max-errors().
     - Fix LibXML::Text role to W3C::DOM::Text
     - Factor tests into subtests. Remove most 'TODO' test descriptions.
 
